--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "config-lite": "^2.0.0",
+    "connect-multiparty": "^2.1.0",
     "ejs": "^2.5.6",
+    "formidable": "^1.2.1",
     "koa": "^2.3.0",
+    "koa-body": "^2.6.0",
     "koa-bodyparser": "^4.2.0",
     "koa-mysql-session": "^0.0.2",
     "koa-router": "^7.2.1",
@@ -28,6 +31,7 @@
     "md5": "^2.2.1",
     "moment": "^2.18.1",
     "mysql": "^2.15.0",
+    "request": "^2.87.0",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
